--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
+  "dependencies": {},
   "devDependencies": {
+    "@webgpu/types": "^0.1.65",
     "typescript": "^5.4.0",
     "vite": "^5.4.0"
   }
