--- a/crates/universe-cli/Cargo.toml
+++ b/crates/universe-cli/Cargo.toml
@@ -18,6 +18,8 @@ anyhow = { workspace = true }
 clap = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
 
 # Phase 1 additions
 tokio = { workspace = true }
