--- a/crates/universe-data/Cargo.toml
+++ b/crates/universe-data/Cargo.toml
@@ -11,7 +11,13 @@ bytemuck = { workspace = true }
 lz4_flex = { workspace = true }
 anyhow = { workspace = true }
 
-# Phase 1 additions
+# Common utilities (pure Rust, OK on wasm)
+bincode = { workspace = true }
+thiserror = { workspace = true }
+tracing = { workspace = true }
+
+# Native-only pipeline / ingestion deps (disabled for wasm32)
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 anise = { workspace = true }
 hifitime = { workspace = true }
 fitsrs = { workspace = true }
@@ -23,6 +29,3 @@ csv = { workspace = true }
 flate2 = { workspace = true }
 futures-util = { workspace = true }
 num_cpus = { workspace = true }
-bincode = { workspace = true }
-thiserror = { workspace = true }
-tracing = { workspace = true }
