Make root planetarium app runnable and render spheres
Add a root Cargo package for the WGPU app, generate a procedural sphere mesh, fix residual unpack to match Python packing, and render 1000 instanced spheres.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,18 @@
+[package]
+name = "neural-planetarium"
+version = "0.1.0"
+edition = "2021"
+
+[dependencies]
+wgpu = "23"
+winit = "0.30"
+pollster = "0.4"
+anyhow = { workspace = true }
+bytemuck = { workspace = true }
+glam = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+
 [workspace]
 resolver = "2"
 members = ["crates/*"]
